--- a/wp-content/themes/mr/scss/_content.scss
+++ b/wp-content/themes/mr/scss/_content.scss
@@ -1,23 +1,32 @@
 // content structure is .content-wrapper > .content > ( .content-header .show-content .content-full )
 
 .content-wrapper{
-	position:absolute;
-	top:0;
-	right:10%;
-	bottom:0;
-	left: 10%;
-	overflow:hidden;
-	pointer-events: none;
-	z-index:10;
+
+
+
+	@include media(momma){
+		position:absolute;
+		top:0;
+		right:10%;
+		bottom:0;
+		left: 10%;
+		overflow:hidden;
+		pointer-events: none;
+		z-index:4;
+	}
 }
 
 .content{
-	position:absolute;
-	bottom:0;
-	left:0;
-	right:0;
 	@include colors-content;
 	pointer-events: auto;
+	
+	@include media(momma){
+		position:absolute;
+		bottom:0;
+		left:0;
+		right:0;
+
+	}
 }
 
 .content-header{
@@ -32,13 +41,16 @@
 .content-full{
 	padding:0 1em 1em;
 	transition:0.3s;
-	input[type=checkbox] ~ &{
+	
+	@include media(momma){
+		input[type=checkbox] ~ &{
 		max-height:0;
 		overflow:hidden;
-	}
-	input[type=checkbox]:checked ~ &{
-		max-height:20em;
-		overflow-y:auto;
+		}
+		input[type=checkbox]:checked ~ &{
+			max-height:20em;
+			overflow-y:auto;
+		}
 	}
 
 }
@@ -55,19 +67,32 @@
 
 // The label
 .content-toggle{
+	position:absolute;
+	right:1em;
+	bottom:1em;
+
+	transition:2s;
+	transform:rotate(360deg);
 	border-radius:50%;
 	@include colors-blue;
-	display:block;
 	width:2em;
 	height:2em;
 	line-height:2;
 	text-align:center;
-	position:absolute;
-	z-index:11;
-	right:1em;
-	top:1em;
+	z-index:6;
 	cursor: pointer;
+	display:none;
+
+	@include media(momma){
+		display:block;
+		top:1em;
+	}
 }
+
+.content-toggle[checked]{
+	transform:rotate(180deg);
+}
+
 .credit{
 	@include colors-orange;
 	padding:0.5em;
