--- a/wp-content/themes/mr/scss/_header.scss
+++ b/wp-content/themes/mr/scss/_header.scss
@@ -4,7 +4,7 @@ header.site-header{
 	margin:0;
 	background:$color-ground;
 	h1{
-		font-size:4em;
+		font-size:4rem;
 		margin:0;
 		padding:0.25em;
 		font-weight:700;
