--- a/wp-content/themes/mr/scss/_media.scss
+++ b/wp-content/themes/mr/scss/_media.scss
@@ -1,10 +1,24 @@
 .galleria-wrapper{
+	@include box-sizing(content-box);
+	position:relative;
 	background:black;
 	width:100%;
+	height:0;
+	padding-bottom:56.25%;
+	
+	@include media(momma){
+		padding:0;
+		height:auto;
+		position:absolute;
+		top:6em;
+		right:0;
+		bottom:0;
+		left:0;
+	}
 }
 .galleria{
 	position:absolute;
-	top:6em;
+	top:0;
 	right:0;
 	bottom:0;
 	left:0;
