--- a/wp-content/themes/mr/scss/style.scss
+++ b/wp-content/themes/mr/scss/style.scss
@@ -3,9 +3,8 @@
 @import "normalize";
 @import "colors";
 @import "layout";
-
+@import "navigation";
 @import "typography";
 @import "header";
-
 @import "content";
 @import "media";
