--- a/wp-content/themes/mr/style.css
+++ b/wp-content/themes/mr/style.css
@@ -417,6 +417,99 @@ body {
     left: 0;
     overflow: none; } }
 
+/* line 13, scss/_navigation.scss */
+.header-menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  padding: 0 0 0.25em 0; }
+  /* line 20, scss/_navigation.scss */
+  .header-menu ul {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    z-index: 5; }
+    @media screen and (min-width: 600px) {
+      /* line 20, scss/_navigation.scss */
+      .header-menu ul {
+        position: static;
+        float: right;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        overflow: hidden;
+        *zoom: 1; }
+        /* line 49, ../../../../../../Program Files (x86)/Koala/rubygems/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/lists/_inline-block-list.scss */
+        .header-menu ul li {
+          list-style-image: none;
+          list-style-type: none;
+          margin-left: 0;
+          display: -moz-inline-stack;
+          display: inline-block;
+          vertical-align: middle;
+          *vertical-align: auto;
+          zoom: 1;
+          *display: inline;
+          white-space: nowrap; } }
+  /* line 35, scss/_navigation.scss */
+  .header-menu a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 1em 1em 0.75em 1em;
+    line-height: 4;
+    background-color: #002032; }
+    /* line 8, scss/_navigation.scss */
+    .header-menu a:hover {
+      background-color: #00304c; }
+    @media screen and (min-width: 600px) {
+      /* line 35, scss/_navigation.scss */
+      .header-menu a {
+        display: inline-block;
+        float: right; } }
+
+/* line 45, scss/_navigation.scss */
+.header-menu input[type=checkbox] ~ ul {
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.3s; }
+  @media screen and (min-width: 600px) {
+    /* line 45, scss/_navigation.scss */
+    .header-menu input[type=checkbox] ~ ul {
+      max-height: 13em; } }
+
+/* line 53, scss/_navigation.scss */
+.header-menu input[type=checkbox]:checked ~ ul {
+  max-height: 24em;
+  overflow: hidden; }
+
+/* line 58, scss/_navigation.scss */
+.showmenu-label {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 1em 1em 0.75em 1em;
+  line-height: 4;
+  background-color: #002032;
+  cursor: pointer;
+  float: right; }
+  /* line 8, scss/_navigation.scss */
+  .showmenu-label:hover {
+    background-color: #00304c; }
+  @media screen and (min-width: 600px) {
+    /* line 58, scss/_navigation.scss */
+    .showmenu-label {
+      display: none; } }
+
+/* line 67, scss/_navigation.scss */
+.showmenu {
+  display: none; }
+
 /* line 3, scss/_typography.scss */
 body {
   font: 300 1em 'Open Sans'; }
@@ -429,7 +522,7 @@ header.site-header {
   background: #002032; }
   /* line 6, scss/_header.scss */
   header.site-header h1 {
-    font-size: 4em;
+    font-size: 4rem;
     margin: 0;
     padding: 0.25em;
     font-weight: 700;
@@ -447,70 +540,86 @@ header.site-header {
     background-color: #eddc4b;
     background-image: linear-gradient(to right, #8ac1af, #8ac1af 33.33%, #eddc4b 33.33%, #eddc4b 66.66%, #dd773f 66.66%); }
 
-/* line 3, scss/_content.scss */
-.content-wrapper {
-  position: absolute;
-  top: 0;
-  right: 10%;
-  bottom: 0;
-  left: 10%;
-  overflow: hidden;
-  pointer-events: none;
-  z-index: 10; }
+@media screen and (min-width: 600px) {
+  /* line 3, scss/_content.scss */
+  .content-wrapper {
+    position: absolute;
+    top: 0;
+    right: 10%;
+    bottom: 0;
+    left: 10%;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: 4; } }
 
-/* line 14, scss/_content.scss */
+/* line 19, scss/_content.scss */
 .content {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
   background: white;
   color: #002032;
   pointer-events: auto; }
+  @media screen and (min-width: 600px) {
+    /* line 19, scss/_content.scss */
+    .content {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0; } }
 
-/* line 23, scss/_content.scss */
+/* line 32, scss/_content.scss */
 .content-header {
   position: relative;
   padding: 1em 1em 0; }
-  /* line 26, scss/_content.scss */
+  /* line 35, scss/_content.scss */
   .content-header h1 {
     margin: 0;
     font-weight: 300; }
 
-/* line 32, scss/_content.scss */
+/* line 41, scss/_content.scss */
 .content-full {
   padding: 0 1em 1em;
   transition: 0.3s; }
-  /* line 35, scss/_content.scss */
-  input[type=checkbox] ~ .content-full {
-    max-height: 0;
-    overflow: hidden; }
-  /* line 39, scss/_content.scss */
-  input[type=checkbox]:checked ~ .content-full {
-    max-height: 20em;
-    overflow-y: auto; }
+  @media screen and (min-width: 600px) {
+    /* line 46, scss/_content.scss */
+    input[type=checkbox] ~ .content-full {
+      max-height: 0;
+      overflow: hidden; }
+    /* line 50, scss/_content.scss */
+    input[type=checkbox]:checked ~ .content-full {
+      max-height: 20em;
+      overflow-y: auto; } }
 
-/* line 52, scss/_content.scss */
+/* line 64, scss/_content.scss */
 .show-content {
   display: none; }
 
-/* line 57, scss/_content.scss */
+/* line 69, scss/_content.scss */
 .content-toggle {
+  position: absolute;
+  right: 1em;
+  bottom: 1em;
+  transition: 2s;
+  transform: rotate(360deg);
   border-radius: 50%;
   background-color: #8ac1af;
   color: white;
-  display: block;
   width: 2em;
   height: 2em;
   line-height: 2;
   text-align: center;
-  position: absolute;
-  z-index: 11;
-  right: 1em;
-  top: 1em;
-  cursor: pointer; }
+  z-index: 6;
+  cursor: pointer;
+  display: none; }
+  @media screen and (min-width: 600px) {
+    /* line 69, scss/_content.scss */
+    .content-toggle {
+      display: block;
+      top: 1em; } }
 
-/* line 71, scss/_content.scss */
+/* line 92, scss/_content.scss */
+.content-toggle[checked] {
+  transform: rotate(180deg); }
+
+/* line 96, scss/_content.scss */
 .credit {
   background-color: #dd773f;
   color: white;
@@ -518,13 +627,29 @@ header.site-header {
 
 /* line 1, scss/_media.scss */
 .galleria-wrapper {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  position: relative;
   background: black;
-  width: 100%; }
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; }
+  @media screen and (min-width: 600px) {
+    /* line 1, scss/_media.scss */
+    .galleria-wrapper {
+      padding: 0;
+      height: auto;
+      position: absolute;
+      top: 6em;
+      right: 0;
+      bottom: 0;
+      left: 0; } }
 
-/* line 5, scss/_media.scss */
+/* line 19, scss/_media.scss */
 .galleria {
   position: absolute;
-  top: 6em;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
