--- a/wp-content/themes/mr/style.css
+++ b/wp-content/themes/mr/style.css
@@ -408,7 +408,7 @@ body {
   box-sizing: border-box; }
 
 @media screen and (min-width: 600px) {
-  /* line 13, scss/_layout.scss */
+  /* line 17, scss/_layout.scss */
   .site-wrapper {
     position: absolute;
     top: 0;
@@ -551,48 +551,69 @@ header.site-header {
     overflow: hidden;
     pointer-events: none;
     z-index: 4; } }
+@media screen and (max-height: 30em) {
+  /* line 3, scss/_content.scss */
+  .content-wrapper {
+    position: static; } }
 
-/* line 19, scss/_content.scss */
+/* line 22, scss/_content.scss */
 .content {
   background: white;
   color: #002032;
   pointer-events: auto; }
   @media screen and (min-width: 600px) {
-    /* line 19, scss/_content.scss */
+    /* line 22, scss/_content.scss */
     .content {
       position: absolute;
       bottom: 0;
       left: 0;
       right: 0; } }
+  @media screen and (max-height: 30em) {
+    /* line 22, scss/_content.scss */
+    .content {
+      position: static; } }
 
-/* line 32, scss/_content.scss */
+/* line 41, scss/_content.scss */
 .content-header {
   position: relative;
   padding: 1em 1em 0; }
-  /* line 35, scss/_content.scss */
+  /* line 44, scss/_content.scss */
   .content-header h1 {
     margin: 0;
     font-weight: 300; }
 
-/* line 41, scss/_content.scss */
+/* line 56, scss/_content.scss */
 .content-full {
   padding: 0 1em 1em;
   transition: 0.3s; }
   @media screen and (min-width: 600px) {
-    /* line 46, scss/_content.scss */
-    input[type=checkbox] ~ .content-full {
-      max-height: 0;
-      overflow: hidden; }
-    /* line 50, scss/_content.scss */
-    input[type=checkbox]:checked ~ .content-full {
-      max-height: 20em;
-      overflow-y: auto; } }
+    /* line 56, scss/_content.scss */
+    .content-full {
+      max-height: 20em; }
+      /* line 65, scss/_content.scss */
+      input[type=checkbox] ~ .content-full {
+        max-height: 0;
+        overflow: hidden; }
+      /* line 75, scss/_content.scss */
+      input[type=checkbox]:checked ~ .content-full {
+        max-height: 20em;
+        overflow-y: auto; } }
+      @media screen and (min-width: 600px) and (max-height: 30em) {
+        /* line 65, scss/_content.scss */
+        input[type=checkbox] ~ .content-full {
+          max-height: 1200em;
+          overflow: hidden; } }
+      @media screen and (min-width: 600px) and (max-height: 30em) {
+        /* line 75, scss/_content.scss */
+        input[type=checkbox]:checked ~ .content-full {
+          max-height: 1200em;
+          overflow: hidden; } }
 
-/* line 67, scss/_content.scss */
+/* line 93, scss/_content.scss */
 .show-content {
   display: none; }
 
-/* line 72, scss/_content.scss */
+/* line 98, scss/_content.scss */
 .content-toggle {
   position: absolute;
   right: 1em;
@@ -609,12 +630,16 @@ header.site-header {
   cursor: pointer;
   display: none; }
   @media screen and (min-width: 600px) {
-    /* line 72, scss/_content.scss */
+    /* line 98, scss/_content.scss */
     .content-toggle {
       display: block;
       top: 1em; } }
+    @media screen and (min-width: 600px) and (max-height: 30em) {
+      /* line 98, scss/_content.scss */
+      .content-toggle {
+        display: none; } }
 
-/* line 94, scss/_content.scss */
+/* line 123, scss/_content.scss */
 .credit {
   background-color: #dd773f;
   color: white;
@@ -640,8 +665,15 @@ header.site-header {
       right: 0;
       bottom: 0;
       left: 0; } }
+  @media screen and (max-height: 30em) {
+    /* line 1, scss/_media.scss */
+    .galleria-wrapper {
+      position: relative;
+      top: 0;
+      height: 0;
+      padding-bottom: 56.25%; } }
 
-/* line 19, scss/_media.scss */
+/* line 26, scss/_media.scss */
 .galleria {
   position: absolute;
   top: 0;
