--- a/wp-content/themes/mr/scss/_header.scss
+++ b/wp-content/themes/mr/scss/_header.scss
@@ -22,4 +22,8 @@ header.site-header{
 		background-color:rgb(237, 220, 75);
 		background-image:$brand-stripe;
 	}
+	a{
+		text-decoration:none;
+		color:white;
+	}
 }
