--- a/wp-content/themes/mr/scss/_content.scss
+++ b/wp-content/themes/mr/scss/_content.scss
@@ -107,8 +107,8 @@
 // The label
 .content-toggle{
 	position:absolute;
-	right:1em;
-	bottom:1em;
+	right:0;
+	bottom:0;
 
 	transition:2s;
 	border-radius:50%;
