--- a/wp-content/themes/mr/scss/_navigation.scss
+++ b/wp-content/themes/mr/scss/_navigation.scss
@@ -16,8 +16,10 @@
 	  right:0;
 	  left:0;
 	  padding:0 0 0.25em 0;
+	  pointer-events:none;
 
 	ul{
+		pointer-events:auto;
 		position:absolute;
   		left:0;
   		right:0;
