--- a/wp-content/themes/mr/scss/_media.scss
+++ b/wp-content/themes/mr/scss/_media.scss
@@ -31,3 +31,28 @@
 	left:0;
 	z-index:2;
 }
+
+.video-wrapper{
+	width:100%;
+	height:0;
+	padding-bottom:56.25%;
+	overflow:hidden;
+	pointer-events:none;
+}
+
+iframe{
+	pointer-events:auto;
+	width:100%;
+	height:100%;
+
+}
+
+
+.wallpaper{
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-size:cover;
+}
