--- a/wp-content/themes/mr/scss/_navigation.scss
+++ b/wp-content/themes/mr/scss/_navigation.scss
@@ -16,7 +16,7 @@
 	  right:0;
 	  left:0;
 	  padding:0 0 0.25em 0;
-	  pointer-events:none;
+	  pointer-events:auto;
 
 	ul{
 		pointer-events:auto;
@@ -68,4 +68,31 @@
 }
 .showmenu{
 	display:none;
+}
+
+
+// toggles
+
+@mixin toggles{
+	font-family:Georgia, serif; 
+	font-weight:bold;
+	font-style:italic;
+	display:block;
+	border-radius:50%;
+	border:solid white 0.25em;
+	@include colors-orange;
+	width:2.5em;
+	height:2.5em;
+	line-height:2;
+	text-align:center;
+	cursor: pointer;
+ }
+
+
+.content-toggle{
+	@include toggles;
+	position: absolute;
+	z-index: 20;
+	top: 6.75em;
+	left: 0.75em;
 }
