--- a/wp-content/themes/mr/style.css
+++ b/wp-content/themes/mr/style.css
@@ -407,7 +407,7 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 769px) {
   /* line 17, scss/_layout.scss */
   .site-wrapper {
     position: absolute;
@@ -424,7 +424,7 @@ body {
   right: 0;
   left: 0;
   padding: 0 0 0.25em 0;
-  pointer-events: none; }
+  pointer-events: auto; }
   /* line 21, scss/_navigation.scss */
   .header-menu ul {
     pointer-events: auto;
@@ -436,7 +436,7 @@ body {
     padding: 0;
     margin: 0;
     z-index: 5; }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 769px) {
       /* line 21, scss/_navigation.scss */
       .header-menu ul {
         position: static;
@@ -469,7 +469,7 @@ body {
     /* line 8, scss/_navigation.scss */
     .header-menu a:hover {
       background-color: #00304c; }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 769px) {
       /* line 37, scss/_navigation.scss */
       .header-menu a {
         display: inline-block;
@@ -480,7 +480,7 @@ body {
   max-height: 0;
   overflow: hidden;
   transition: 0.3s; }
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 769px) {
     /* line 47, scss/_navigation.scss */
     .header-menu input[type=checkbox] ~ ul {
       max-height: 13em; } }
@@ -503,7 +503,7 @@ body {
   /* line 8, scss/_navigation.scss */
   .showmenu-label:hover {
     background-color: #00304c; }
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 769px) {
     /* line 60, scss/_navigation.scss */
     .showmenu-label {
       display: none; } }
@@ -511,6 +511,26 @@ body {
 /* line 69, scss/_navigation.scss */
 .showmenu {
   display: none; }
+
+/* line 92, scss/_navigation.scss */
+.content-toggle {
+  font-family: Georgia, serif;
+  font-weight: bold;
+  font-style: italic;
+  display: block;
+  border-radius: 50%;
+  border: solid white 0.25em;
+  background-color: #dd773f;
+  color: white;
+  width: 2.5em;
+  height: 2.5em;
+  line-height: 2;
+  text-align: center;
+  cursor: pointer;
+  position: absolute;
+  z-index: 20;
+  top: 6.75em;
+  left: 0.75em; }
 
 /* line 3, scss/_typography.scss */
 body {
@@ -546,17 +566,17 @@ header.site-header {
     text-decoration: none;
     color: white; }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 769px) {
   /* line 3, scss/_content.scss */
   .content-wrapper {
     position: absolute;
-    top: 0;
-    right: 10%;
-    bottom: 0;
-    left: 10%;
+    top: 8em;
+    left: 2em;
+    right: 50%;
+    bottom: 2em;
     overflow: hidden;
     pointer-events: none;
-    z-index: 4; } }
+    z-index: 8; } }
 @media screen and (max-height: 30em) {
   /* line 3, scss/_content.scss */
   .content-wrapper {
@@ -564,106 +584,115 @@ header.site-header {
 
 /* line 21, scss/_content.scss */
 .feed {
-  padding: 2em; }
-  /* line 23, scss/_content.scss */
-  .feed .content {
-    margin-bottom: 2em; }
+  margin: 1em; }
 
-/* line 28, scss/_content.scss */
+/* line 27, scss/_content.scss */
+.feed-item {
+  padding: 1em;
+  float: left; }
+  /* line 31, scss/_content.scss */
+  .feed-item img {
+    display: block;
+    max-width: 100%;
+    height: auto; }
+  @media screen and (min-width: 769px) {
+    /* line 27, scss/_content.scss */
+    .feed-item {
+      width: 50%; }
+      /* line 39, scss/_content.scss */
+      .feed-item:nth-child(2n+1) {
+        clear: left; } }
+  @media screen and (min-width: 1025px) {
+    /* line 27, scss/_content.scss */
+    .feed-item {
+      width: 33.33%; }
+      /* line 45, scss/_content.scss */
+      .feed-item:nth-child(2n+1) {
+        clear: none; }
+      /* line 48, scss/_content.scss */
+      .feed-item:nth-child(3n+1) {
+        clear: left; } }
+
+/* line 54, scss/_content.scss */
 .content {
   padding: 1em;
   background: white;
   color: #002032;
   pointer-events: auto; }
-  @media screen and (min-width: 600px) {
-    /* line 28, scss/_content.scss */
+  @media screen and (min-width: 769px) {
+    /* line 54, scss/_content.scss */
     .content {
       position: absolute;
       bottom: 0;
       left: 0;
-      right: 0; } }
+      right: 0;
+      overflow: hidden;
+      transition: 1s; } }
   @media screen and (max-height: 30em) {
-    /* line 28, scss/_content.scss */
+    /* line 54, scss/_content.scss */
     .content {
       position: static; } }
 
-/* line 46, scss/_content.scss */
+/* line 74, scss/_content.scss */
 .feed .content {
   position: static; }
 
-/* line 50, scss/_content.scss */
-.content-header {
-  position: relative; }
-  /* line 52, scss/_content.scss */
-  .content-header h1 {
-    margin: 0;
-    font-weight: 300; }
-  /* line 56, scss/_content.scss */
-  .content-header a {
-    text-decoration: none; }
+/* line 79, scss/_content.scss */
+.content-header h1 {
+  margin: 0 3rem 0 0;
+  font-weight: 300; }
+/* line 83, scss/_content.scss */
+.content-header a {
+  text-decoration: none; }
 
-/* line 67, scss/_content.scss */
-.content-full {
-  transition: 0.3s; }
-  @media screen and (min-width: 600px) {
-    /* line 67, scss/_content.scss */
-    .content-full {
-      max-height: 20em; }
-      /* line 75, scss/_content.scss */
-      input[type=checkbox] ~ .content-full {
-        max-height: 0;
-        overflow: hidden; }
-      /* line 85, scss/_content.scss */
-      input[type=checkbox]:checked ~ .content-full {
-        max-height: 20em;
-        overflow-y: auto; } }
-      @media screen and (min-width: 600px) and (max-height: 30em) {
-        /* line 75, scss/_content.scss */
-        input[type=checkbox] ~ .content-full {
-          max-height: 1200em;
-          overflow: hidden; } }
-      @media screen and (min-width: 600px) and (max-height: 30em) {
-        /* line 85, scss/_content.scss */
-        input[type=checkbox]:checked ~ .content-full {
-          max-height: 1200em;
-          overflow: hidden; } }
+@media screen and (min-width: 769px) {
+  /* line 95, scss/_content.scss */
+  .hidden .content-header {
+    cursor: pointer; }
+  /* line 98, scss/_content.scss */
+  .hidden .content-full {
+    height: 0;
+    overflow: hidden; } }
+@media screen and (max-height: 30em) {
+  /* line 93, scss/_content.scss */
+  .hidden {
+    height: auto;
+    overflow-y: scroll;
+    /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch; } }
 
-/* line 103, scss/_content.scss */
+@media screen and (min-width: 769px) {
+  /* line 110, scss/_content.scss */
+  .visible {
+    top: 0;
+    transition: 1s;
+    overflow-y: scroll;
+    /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch; } }
+
+/* line 125, scss/_content.scss */
 .show-content {
   display: none; }
 
-/* line 108, scss/_content.scss */
+/* line 130, scss/_content.scss */
 .content-toggle {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  transition: 2s;
-  border-radius: 50%;
-  background-color: #8ac1af;
-  color: white;
-  width: 2em;
-  height: 2em;
-  line-height: 2;
-  text-align: center;
-  z-index: 6;
-  cursor: pointer;
   display: none; }
-  @media screen and (min-width: 600px) {
-    /* line 108, scss/_content.scss */
+  @media screen and (min-width: 769px) {
+    /* line 130, scss/_content.scss */
     .content-toggle {
-      display: block;
-      top: 1em; } }
-    @media screen and (min-width: 600px) and (max-height: 30em) {
-      /* line 108, scss/_content.scss */
+      display: block; } }
+    @media screen and (min-width: 769px) and (max-height: 30em) {
+      /* line 130, scss/_content.scss */
       .content-toggle {
         display: none; } }
 
-/* line 133, scss/_content.scss */
+/* line 141, scss/_content.scss */
 .meta {
   background-color: #dd773f;
   color: white;
   padding: 0.5em;
-  margin: 0.5em 0; }
+  margin: 0.5em 0;
+  font-size: small; }
 
 /* line 1, scss/_media.scss */
 .galleria-wrapper {
@@ -675,7 +704,7 @@ header.site-header {
   width: 100%;
   height: 0;
   padding-bottom: 56.25%; }
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 769px) {
     /* line 1, scss/_media.scss */
     .galleria-wrapper {
       padding: 0;
@@ -701,3 +730,26 @@ header.site-header {
   bottom: 0;
   left: 0;
   z-index: 2; }
+
+/* line 35, scss/_media.scss */
+.video-wrapper {
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+  pointer-events: none; }
+
+/* line 43, scss/_media.scss */
+iframe {
+  pointer-events: auto;
+  width: 100%;
+  height: 100%; }
+
+/* line 51, scss/_media.scss */
+.wallpaper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover; }
