--- a/wp-content/themes/mr/scss/_media.scss
+++ b/wp-content/themes/mr/scss/_media.scss
@@ -32,14 +32,6 @@
 	z-index:2;
 }
 
-.video-wrapper{
-	width:100%;
-	height:0;
-	padding-bottom:56.25%;
-	overflow:hidden;
-	pointer-events:none;
-}
-
 iframe{
 	pointer-events:auto;
 	width:100%;
@@ -55,4 +47,8 @@ iframe{
 	bottom: 0;
 	left: 0;
 	background-size:cover;
+}
+
+.screen-reader-text{
+	display:none;
 }
