--- a/wp-content/themes/mr/scss/_navigation.scss
+++ b/wp-content/themes/mr/scss/_navigation.scss
@@ -97,3 +97,32 @@
 	top: 6.75em;
 	left: 0.75em;
 }
+
+
+// post-navigation
+
+.post-navigation{
+	padding:1em;
+	@include clearfix;
+	a{
+		color:white;
+	}
+	@include media(momma){
+		 position: absolute;
+		 top:6em;
+		 bottom: 0;
+		 right: 0;
+		 width: 50%;
+	}
+}
+
+.nav-previous{
+	float:left;
+}
+.nav-next{
+	float:right;
+	 @include media(momma){
+	 	position:absolute;
+	 	bottom:1em;
+    }
+}
