--- a/wp-content/themes/mr/style.css
+++ b/wp-content/themes/mr/style.css
@@ -456,7 +456,7 @@ a {
         border: 0;
         overflow: hidden;
         *zoom: 1; }
-        /* line 49, ../../../../../../Program Files (x86)/Koala/rubygems/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/lists/_inline-block-list.scss */
+        /* line 49, ../../../../../../../Applications/Koala.app/Contents/Resources/app.nw/rubygems/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/lists/_inline-block-list.scss */
         .header-menu ul li {
           list-style-image: none;
           list-style-type: none;
@@ -469,7 +469,7 @@ a {
           *display: inline;
           white-space: nowrap; } }
   /* line 37, scss/_navigation.scss */
-  .header-menu a {
+  .header-menu a, .header-menu .active {
     color: white;
     text-decoration: none;
     display: block;
@@ -477,30 +477,38 @@ a {
     line-height: 4;
     background-color: #002032; }
     /* line 8, scss/_navigation.scss */
-    .header-menu a:hover {
+    .header-menu a:hover, .header-menu .active:hover {
       background-color: #00304c; }
     @media screen and (min-width: 769px) {
       /* line 37, scss/_navigation.scss */
-      .header-menu a {
+      .header-menu a, .header-menu .active {
         display: inline-block;
         float: right; } }
+  /* line 45, scss/_navigation.scss */
+  .header-menu .active {
+    font-weight: bold; }
+  /* line 49, scss/_navigation.scss */
+  .header-menu .lang {
+    color: #989898;
+    border-top: 0.25em solid #989898;
+    padding-top: 0.75em; }
 
-/* line 47, scss/_navigation.scss */
+/* line 57, scss/_navigation.scss */
 .header-menu input[type=checkbox] ~ ul {
   max-height: 0;
   overflow: hidden;
   transition: 0.3s; }
   @media screen and (min-width: 769px) {
-    /* line 47, scss/_navigation.scss */
+    /* line 57, scss/_navigation.scss */
     .header-menu input[type=checkbox] ~ ul {
       max-height: 13em; } }
 
-/* line 55, scss/_navigation.scss */
+/* line 65, scss/_navigation.scss */
 .header-menu input[type=checkbox]:checked ~ ul {
   max-height: 24em;
   overflow: hidden; }
 
-/* line 60, scss/_navigation.scss */
+/* line 70, scss/_navigation.scss */
 .showmenu-label {
   pointer-events: auto;
   color: white;
@@ -515,15 +523,15 @@ a {
   .showmenu-label:hover {
     background-color: #00304c; }
   @media screen and (min-width: 769px) {
-    /* line 60, scss/_navigation.scss */
+    /* line 70, scss/_navigation.scss */
     .showmenu-label {
       display: none; } }
 
-/* line 70, scss/_navigation.scss */
+/* line 80, scss/_navigation.scss */
 .showmenu {
   display: none; }
 
-/* line 93, scss/_navigation.scss */
+/* line 103, scss/_navigation.scss */
 .content-toggle {
   font-family: Georgia, serif;
   font-weight: bold;
@@ -543,16 +551,16 @@ a {
   top: 6.5em;
   left: 0.5em; }
 
-/* line 104, scss/_navigation.scss */
+/* line 114, scss/_navigation.scss */
 .post-navigation {
   padding: 1em;
   overflow: hidden;
   *zoom: 1; }
-  /* line 107, scss/_navigation.scss */
+  /* line 117, scss/_navigation.scss */
   .post-navigation a {
     color: white; }
   @media screen and (min-width: 769px) {
-    /* line 104, scss/_navigation.scss */
+    /* line 114, scss/_navigation.scss */
     .post-navigation {
       position: absolute;
       top: 6em;
@@ -560,15 +568,15 @@ a {
       right: 0;
       width: 50%; } }
 
-/* line 119, scss/_navigation.scss */
+/* line 129, scss/_navigation.scss */
 .nav-previous {
   float: left; }
 
-/* line 122, scss/_navigation.scss */
+/* line 133, scss/_navigation.scss */
 .nav-next {
   float: right; }
   @media screen and (min-width: 769px) {
-    /* line 122, scss/_navigation.scss */
+    /* line 133, scss/_navigation.scss */
     .nav-next {
       position: absolute;
       bottom: 1em; } }
