--- a/wp-content/themes/mr/style.css
+++ b/wp-content/themes/mr/style.css
@@ -484,31 +484,44 @@ a {
       .header-menu a, .header-menu .active {
         display: inline-block;
         float: right; } }
-  /* line 45, scss/_navigation.scss */
-  .header-menu .active {
-    font-weight: bold; }
-  /* line 49, scss/_navigation.scss */
-  .header-menu .lang {
-    color: #989898;
-    border-top: 0.25em solid #989898;
-    padding-top: 0.75em; }
+  /* line 46, scss/_navigation.scss */
+  .header-menu .switcher {
+    top: 0.2rem;
+    right: 0.4rem; }
+  /* line 56, scss/_navigation.scss */
+  .header-menu .switch {
+    line-height: 4;
+    display: block;
+    float: right;
+    background-color: #d3dee3;
+    width: 1.8em;
+    height: 1.8em; }
+  /* line 67, scss/_navigation.scss */
+  .header-menu .switch:last-child {
+    border-radius: 50% 0 0 50%; }
+  /* line 71, scss/_navigation.scss */
+  .header-menu .switch:first-child {
+    border-radius: 0 50% 50% 0; }
+  /* line 76, scss/_navigation.scss */
+  .header-menu .switch.active {
+    background-color: #f3f6f7; }
 
-/* line 57, scss/_navigation.scss */
+/* line 82, scss/_navigation.scss */
 .header-menu input[type=checkbox] ~ ul {
   max-height: 0;
   overflow: hidden;
   transition: 0.3s; }
   @media screen and (min-width: 769px) {
-    /* line 57, scss/_navigation.scss */
+    /* line 82, scss/_navigation.scss */
     .header-menu input[type=checkbox] ~ ul {
       max-height: 13em; } }
 
-/* line 65, scss/_navigation.scss */
+/* line 90, scss/_navigation.scss */
 .header-menu input[type=checkbox]:checked ~ ul {
   max-height: 24em;
   overflow: hidden; }
 
-/* line 70, scss/_navigation.scss */
+/* line 95, scss/_navigation.scss */
 .showmenu-label {
   pointer-events: auto;
   color: white;
@@ -523,15 +536,15 @@ a {
   .showmenu-label:hover {
     background-color: #00304c; }
   @media screen and (min-width: 769px) {
-    /* line 70, scss/_navigation.scss */
+    /* line 95, scss/_navigation.scss */
     .showmenu-label {
       display: none; } }
 
-/* line 80, scss/_navigation.scss */
+/* line 105, scss/_navigation.scss */
 .showmenu {
   display: none; }
 
-/* line 103, scss/_navigation.scss */
+/* line 128, scss/_navigation.scss */
 .content-toggle {
   font-family: Georgia, serif;
   font-weight: bold;
@@ -551,16 +564,16 @@ a {
   top: 6.5em;
   left: 0.5em; }
 
-/* line 114, scss/_navigation.scss */
+/* line 139, scss/_navigation.scss */
 .post-navigation {
   padding: 1em;
   overflow: hidden;
   *zoom: 1; }
-  /* line 117, scss/_navigation.scss */
+  /* line 142, scss/_navigation.scss */
   .post-navigation a {
     color: white; }
   @media screen and (min-width: 769px) {
-    /* line 114, scss/_navigation.scss */
+    /* line 139, scss/_navigation.scss */
     .post-navigation {
       position: absolute;
       top: 6em;
@@ -568,45 +581,45 @@ a {
       right: 0;
       width: 50%; } }
 
-/* line 132, scss/_navigation.scss */
+/* line 157, scss/_navigation.scss */
 .nav-previous {
   float: left; }
-  /* line 134, scss/_navigation.scss */
+  /* line 159, scss/_navigation.scss */
   .nav-previous a {
     text-decoration: none; }
-  /* line 143, scss/_navigation.scss */
+  /* line 168, scss/_navigation.scss */
   .nav-previous span {
     vertical-align: middle; }
 
-/* line 148, scss/_navigation.scss */
+/* line 173, scss/_navigation.scss */
 .nav-next {
   float: right; }
-  /* line 150, scss/_navigation.scss */
+  /* line 175, scss/_navigation.scss */
   .nav-next a {
     text-decoration: none; }
-  /* line 160, scss/_navigation.scss */
+  /* line 185, scss/_navigation.scss */
   .nav-next span {
     vertical-align: middle; }
   @media screen and (min-width: 769px) {
-    /* line 148, scss/_navigation.scss */
+    /* line 173, scss/_navigation.scss */
     .nav-next {
       position: absolute;
       bottom: 1em; } }
 
-/* line 172, scss/_navigation.scss */
+/* line 197, scss/_navigation.scss */
 .paging-navigation {
   padding: 0 10px;
   width: 100%; }
-  /* line 176, scss/_navigation.scss */
+  /* line 201, scss/_navigation.scss */
   .paging-navigation .nav-next {
     float: right;
     position: relative;
     bottom: 0; }
-  /* line 182, scss/_navigation.scss */
+  /* line 207, scss/_navigation.scss */
   .paging-navigation a, .paging-navigation a:visited {
     color: white; }
 
-/* line 188, scss/_navigation.scss */
+/* line 213, scss/_navigation.scss */
 .post-image-nav-left,
 .post-image-nav-right {
   bottom: 0;
@@ -619,28 +632,28 @@ a {
   filter: alpha(opacity=60);
   display: inline-block; }
 
-/* line 200, scss/_navigation.scss */
+/* line 225, scss/_navigation.scss */
 .post-image-nav-left {
   right: 126px; }
 
-/* line 203, scss/_navigation.scss */
+/* line 228, scss/_navigation.scss */
 .post-image-nav-right {
   right: 0;
   background-position: 100% 0; }
 
-/* line 209, scss/_navigation.scss */
+/* line 234, scss/_navigation.scss */
 .post-image-nav-left,
 .post-image-nav-right {
   background-image: url(js/galleria/themes/marcrees/mr-controls.svg);
   background-repeat: no-repeat; }
 
-/* line 216, scss/_navigation.scss */
+/* line 241, scss/_navigation.scss */
 .post-image-nav-left:active,
 .post-image-nav-right:active {
   opacity: 1;
   filter: alpha(opacity=100); }
 
-/* line 223, scss/_navigation.scss */
+/* line 248, scss/_navigation.scss */
 .post-image-nav-left:hover,
 .post-image-nav-right:hover {
   opacity: 1;
